css/stylesheet.scss
--- 
---

$heading-font: "EB Garamond", serif;
$base-font: "Raleway", sans-serif;
$nav-font: "Alegreya Sans SC", sans-serif;
$code-font: "Encode Sans Condensed", sans-serif;

/***********************************************/

html {
  width: 100%;
  height: 100%;
  background-color: white;
}

body {
  background-color: #fff;
  color: #800000;
  font-size: 1rem;
  font-family: $base-font;
  font-optical-sizing: auto;
  font-weight: 500;
}

a {
  text-decoration: none;
  font-family: $base-font;
  font-optical-sizing: auto;
  font-weight: 550;
  color: #155F83;
  transition: 0.5s all;

  &:hover {
    text-decoration: underline;
  }
}

h2, h3, h4 {
  color: #155F83;
  font-family: $heading-font;
}

h2 {
  font-weight: 800;
  font-size: 1.5rem;
}

h3 {
  font-weight: 700;
  font-size: 1.3rem;
  text-align: right;
}

h4 {
  font-weight: 600;
  font-size: 1.2rem;
}

ul, ol {
  padding-left: 1em;
}

ol li {
  padding-left: 0.5em;
}

/***********************************************/

.main-wrapper {
  width: 75%;
  max-width: 960px;
  margin: 10px auto 0px;
  padding: 2rem 11%;
  background-color: #F7F6EE;
  box-shadow: 0 0 15px 2px #000;
  overflow: auto;
}

/***********************************************/

header {
  font-family: $heading-font;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  width: min(960px, 80%);
  margin: 0.25rem auto 0.2rem;

  h1 {
    text-align: center;
    font-size: 1.5rem;
  }

  a:hover {
    text-decoration: none;
  }
}

/***********************************************/

nav#nav-main ul{
	padding-left: 0em;

	list-style: none;
	margin: 0; 

	display:-webkit-box;
    display:-ms-flexbox;
	display:flex;
	flex-flow: row nowrap;
	/*  items are distributed so that the spacing between any two items (and the space to the edges) is equal. */
	justify-content: flex-evenly;

	li{
		display: inline-block;
		margin-left: 0.5em;
		margin-right: 0.5em;
		list-style-type:none;
		a{
			font-family: $nav-font;
			font-weight: 700;
			font-size: 1.2em;
			color: #3A494C;
			padding: 0.4em 1em;
			display: block;
			position: relative;
			// border-radius: 0.5em;
			// -webkit-border-radius: 0.5em;
			// -moz-border-radius: 0.5em;
			// -o-border-radius: 0.5em;
			
			transition: all 2s;
			
			&:after{
				position: absolute;
				bottom: 0;
				left: 0;
				right: 0;
				margin: 0;
				width: 0%;
				content: '.';
				color: transparent;
				background: #aaa;
				height: 1px;
				text-align: left;
				opacity: 0;
			}
			
			&:hover{
				color: #A5D3DB;
				text-decoration: none;
				z-index: 1;
			}
			
			&:hover:after{
				z-index: -10;
				animation: fill 0.25s forwards;
				-webkit-animation: fill 0.25s forwards;
				-moz-animation: fill 0.25s forwards;
				opacity: 1;
			}

			&.active{
				border-bottom:1.5px solid #800000;
			}
		}
		
		&:hover > ul{
			visibility:visible;
			opacity:1;
		}
		
		ul{
			display:-webkit-box;
			display:-ms-flexbox;
			display:flex;
			flex-flow: column nowrap;
			justify-content: flex-start;
			word-spacing: 0.15em;
			
			list-style: none;
			margin: 0;
			padding: 0;
			
			visibility:hidden;
			opacity:0;
			position: absolute;
			z-index: 999;
			-webkit-transition:opacity 0.2s linear, visibility 0.2s linear;
			-moz-transition:opacity 0.2s linear, visibility 0.2s linear;
			-o-transition:opacity 0.2s linear, visibility 0.2s linear;
			transition:opacity 0.2s linear, visibility 0.2s linear;	
			
			background-color:#FFF;
			border-left:3px solid #800000;
			border-bottom:3px solid #800000;
			
		}
	}
	}

@media all and (max-width: 1280px){
	header h1{
			font-size:1.5rem;
		}
	
	nav#nav-main ul li a{
			font-size:1rem;
			padding: 0.4em 0.5em;
		}
}

/* Small screens */
@media all and (max-width: 900px) {
	nav#nav-main{
		display:none;
	}
}

/* Keyframes */

@keyframes fill {
	0% {
	  width: 0%;
	  height: 1px;
	}
	50% {
	  width: 100%;
	  height: 1px;
	}
	100% {
	  width: 100%;
	  height: 100%;
	  background:#3A494C;
	}
}

@-webkit-keyframes fill{
	0% {
	  width: 0%;
	  height: 1px;
	}
	50% {
	  width: 100%;
	  height: 1px;
	}
	100% {
	  width: 100%;
	  height: 100%;
	  background:#3A494C;
	}
}



  @-moz-keyframes fill {
	0% {
	  width: 0%;
	  height: 1px;
	}
	50% {
	  width: 100%;
	  height: 1px;
	}
	100% {
	  width: 100%;
	  height: 100%;
	  background:#3A494C;
	}
}

@-o-keyframes fill {
	0% {
	  width: 0%;
	  height: 1px;
	}
	50% {
	  width: 100%;
	  height: 1px;
	}
	100% {
	  width: 100%;
	  height: 100%;
	  background:#3A494C;
	}
}


/*************************************/


#nav-trigger{
	display:none; 
	text-align:center;
}
@media all and (max-width: 900px) {
    #nav-trigger{
        display:-webkit-box;
        display:-ms-flexbox;
        display:flex;
        -webkit-box-pack:end;
        -ms-flex-pack:end;
        justify-content:flex-end;
        -webkit-box-align:center;
        -ms-flex-align:center;
        align-items:center;
        padding:0.5em 0.5em;
    }
}

#nav-trigger span{
    display:inline-block;
    cursor:pointer;
}





/************************************/



.wrapper-menu{
    width:30px;
    height:30px;
    display:-webkit-box;
    display:-ms-flexbox;
    display:flex;
    -webkit-box-orient:vertical;
    -webkit-box-direction:normal;
    -ms-flex-direction:column;
    flex-direction:column;
    -webkit-box-pack:justify;
    -ms-flex-pack:justify;
	justify-content:space-between;
	cursor:pointer;
    -webkit-transition:-webkit-transform .33s ease-out;
    transition:-webkit-transform .33s ease-out;
    transition:transform .33s ease-out;
    transition:transform .33s ease-out,-webkit-transform .33s ease-out;
}
.wrapper-menu.open{
    -webkit-transform:rotate(-45deg);
    transform:rotate(-45deg);
}

/**********************Hamburger Menu******************************************************/
.line-menu{
    background-color:#800000;
    border-radius:5px;
    width:100%;
	height:4px;
}


.line-menu.half{
	width:50%;
}

	
.line-menu.start{
	-webkit-transition:-webkit-transform .33s cubic-bezier(.54,-.81,.57,.57);
	transition:-webkit-transform .33s cubic-bezier(.54,-.81,.57,.57);
	transition:transform .33s cubic-bezier(.54,-.81,.57,.57);
	transition:transform .33s cubic-bezier(.54,-.81,.57,.57),-webkit-transform .33s cubic-bezier(.54,-.81,.57,.57);
	-webkit-transform-origin:right;
	transform-origin:right;
}

.open .line-menu.start {
	-webkit-transform:rotate(-90deg) translateX(3px);
	transform:rotate(-90deg) translateX(3px)	

}
.line-menu.end {
	-ms-flex-item-align:end;
	align-self:flex-end;
	-webkit-transition:-webkit-transform .33s cubic-bezier(.54,-.81,.57,.57);
	transition:-webkit-transform .33s cubic-bezier(.54,-.81,.57,.57);
	transition:transform .33s cubic-bezier(.54,-.81,.57,.57);
	transition:transform .33s cubic-bezier(.54,-.81,.57,.57),-webkit-transform .33s cubic-bezier(.54,-.81,.57,.57);
	-webkit-transform-origin:left;
	transform-origin:left;
}

.open .line-menu.end{
	-webkit-transform:rotate(-90deg) translateX(-3px);
	transform:rotate(-90deg) translateX(-3px)
}



/**********************************************************************************************************/


nav#nav-mobile{
    display:none;
}

@media all and (max-width: 900px) {
    nav#nav-mobile {
		display:block;
	}
}

nav#nav-mobile ul{
    display:none;
    list-style-type:none;
    position:absolute;
    top:76px;
    left:0;
    right:0;
	z-index: 1;
    margin-left:auto;
    margin-right:auto;
    text-align:center;
    background-color:#FFF;
    border-bottom:3px solid #800000;
    margin-top:1em;

    li{
        display:block;
        padding:.5em;

        a{
			font-family: $nav-font;
			font-weight: 700;
			font-size:1em;
			color:#3A494C;
			padding: 10px 30px;
            display:block;
            z-index:999;
            text-decoration:none;
            

            &:hover{
                color: #A5D3DB;
				background:#3A494C;
				text-decoration: none;
            }
        }
		
    }

}



/***********************************************/

footer {
	font-weight: 300;
	font-size: 0.8em;
	border-top: 0.1em dotted #FFF;
	padding-top:1em;
	margin: 0px 20% 0px 20%;
}


/***********************************************/
.about {
	display: -webkit-box;
  	display: -moz-box;
  	display: -ms-flexbox;
  	display: -webkit-flex;
  	display: flex;
  	flex-flow: row wrap;
  	justify-content: space-evenly;
	align-items: center;
	  
	border-bottom: 4px  solid #800000;
  }

@media all and (max-width: 500px) {
	.about{
		flex-flow: column wrap;
	}
}





.picture{
	order: 1;
	float:left;
	img{
		width:10em;
		@media screen and (min-width: 960px) {
			width: 15em;
		}
	}
	
}


.mail{
	order:2;
	padding: 1em;
	display: -webkit-box;
  	display: -moz-box;
  	display: -ms-flexbox;
  	display: -webkit-flex;
	display:flex;
	flex-direction: column;
	justify-content: space-evenly;
}

.shield{
	order: 3;
	float:right;
	display:flex;
	flex-direction: column;
	justify-content: center;
	align-items:center;
	
	.old{
		display:flex;
		flex-direction: row;
		justify-content: space-evenly;
		align-items:center;
		
		img{
			height:3.5em;
		}		
	}
	
	.current img{
		height:10em;
	}
	
}


.anchor {
  @extend .about;
  align-items: flex-start;
  border-bottom: 2px solid #800000;

  h2 {
    text-align: center;
  }
}




.experience {
	order:1;
	float:left;
	h3 {
		text-align: center;
	}

	ul li {
		list-style: none;
		padding-left: 1.3em;
		padding-bottom: 1em;
	}

	ul li:before {    
		font-family: 'FontAwesome';
		content: '\f0b1';
		display: inline-block;
		margin-left: -1.3em; /* same as padding-left set on li */
		width: 1.3em; /* same as padding-left set on li */
	}
}

.education {
	order:2;
	float:right;
	h3 {
		text-align: center;
	}

	ul li {
		list-style: none;
		padding-left: 1.5em;
		padding-bottom: 1em;
	}

	ul li:before {    
		font-family: 'FontAwesome';
		content: '\f19d';
		display: inline-block;
		margin-left: -1.5em; /* same as padding-left set on li */
		width: 1.5em; /* same as padding-left set on li */
	}
}

/***********************************************/


table {
	padding-top: 0.5em;
	border-collapse:collapse;
	th, td {
		padding:0.1em 0.5em;
	}
	td:first-child {
		font-weight: bold;
		text-align: right;
	}

tr:nth-child(odd) {
		background-color: #eee;
}	
}


.schedule {
overflow-x:auto;
text-align: center;
table{
	margin-left:auto; 
		margin-right:auto;
}
}	



code{
	background-color: #ddd;
	border-radius: 5px;
	display: inline-block;
	font-family: $code-font;
}

#backicon{ 
	width:1em; 
}

/***********************************************/


.papers {
    padding: 0em;
    margin: 0em;
    border-top: dotted 0.1em;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    p {
        padding: 0em;
        margin: 0.5em 0em;
    }
}

.course {
	@extend .papers;
	p{
		padding: 0em;
		margin: 0.2em 0em;
	}
}

/******************************************************/

